--- a/Mejores_paquetes_de_PYTHON_para_finanzas.ipynb
+++ b/Mejores_paquetes_de_PYTHON_para_finanzas.ipynb
@@ -322,6 +322,202 @@
     "poisson_res = poisson_mod.fit(method='Newton')\n",
     "print(poisson_res.summary()) "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quandl\n",
+    "\n",
+    "Al considerar modelos financieros, necesitamos datos financieros. Aquí es donde ***Quandl*** viene al rescate. Este modulo brinda a los usuarios acceso a la vasta colección de datos económicos, financieros y de mercado recopilados de bancos centrales, gobiernos, organizaciones multinacionales y muchas otras fuentes.\n",
+    "\n",
+    "La mayoría de los conjuntos de datos sin procesar son de acceso gratuito al registrarse (necesita un API), para conjuntos de datos más vanzados y detallados se debe asumir un costo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Last</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Turnover</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-11-20</th>\n",
+       "      <td>18.18</td>\n",
+       "      <td>18.43</td>\n",
+       "      <td>18.000</td>\n",
+       "      <td>18.35</td>\n",
+       "      <td>38392898.0</td>\n",
+       "      <td>7.003281e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-11-23</th>\n",
+       "      <td>18.45</td>\n",
+       "      <td>18.70</td>\n",
+       "      <td>18.215</td>\n",
+       "      <td>18.61</td>\n",
+       "      <td>3352514.0</td>\n",
+       "      <td>6.186446e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-11-24</th>\n",
+       "      <td>18.70</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>18.370</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>4871901.0</td>\n",
+       "      <td>8.994087e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-11-25</th>\n",
+       "      <td>18.85</td>\n",
+       "      <td>19.50</td>\n",
+       "      <td>18.770</td>\n",
+       "      <td>19.45</td>\n",
+       "      <td>4802607.0</td>\n",
+       "      <td>9.153862e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-11-26</th>\n",
+       "      <td>19.48</td>\n",
+       "      <td>19.67</td>\n",
+       "      <td>19.410</td>\n",
+       "      <td>19.43</td>\n",
+       "      <td>1648481.0</td>\n",
+       "      <td>3.220713e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High     Low   Last      Volume      Turnover\n",
+       "Date                                                             \n",
+       "2015-11-20  18.18  18.43  18.000  18.35  38392898.0  7.003281e+08\n",
+       "2015-11-23  18.45  18.70  18.215  18.61   3352514.0  6.186446e+07\n",
+       "2015-11-24  18.70  18.80  18.370  18.80   4871901.0  8.994087e+07\n",
+       "2015-11-25  18.85  19.50  18.770  19.45   4802607.0  9.153862e+07\n",
+       "2015-11-26  19.48  19.67  19.410  19.43   1648481.0  3.220713e+07"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import quandl\n",
+    "\n",
+    "#Remplace por su propio API key de Quandl\n",
+    "\n",
+    "QUANDL_API_KEY =  'API key'\n",
+    "quandl.ApiConfig.api_key = QUANDL_API_KEY\n",
+    "df = quandl.get('EURONEXT/ABN')\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zipline\n",
+    "\n",
+    "Es un paquete que une las estadísticas, las estructuras de datos y las fuentes de datos. Es una formidable librería de negocios algorítmica para Python, evidentemente porque cuenta con el apoyo de Quanti¿opian, una plataforma gratuita para crear estrategias comerciales.\n",
+    "\n",
+    "Los datos de Quandl se importan fácilmente y los algoritmos personalizados se diseñan, prueban e implementan fácilmente. Esto inclute backtesting de algoritmos y operaciones en vivo."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pyfolio\n",
+    "\n",
+    "Después de diseñar y probar un algoritmo en zipline, el paquete pyfolio proporciona una manera fácil de generar un informe que contiene estadísticas de rendimiento. Estas estadísticas incluyen rendimientos anuales/mensuales, cuantiles de rendimineto, ratio de Sharpe, rotación de la cartera y algunos más. Para generar el informe procedemos con el siguiente código:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyfolio as pf\n",
+    "\n",
+    "stock_rets = pf.utils.get_symbol_rets('FB')\n",
+    "pf.create_returns_tear_sheet(stock_rets, live_start_date='2022-12-1') "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ta-Lib\n",
+    "\n",
+    "Es una alternativa al uso de zipline y pyfolio. El proyecto está escrito en C++ pero existe un contenedor para Python, proporciona herramientas financieras comunes como estudios de superposición, indicadores de impulso, indicadores de ciclo, reconocimiento de patrones y funciones estadísticas puras."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quant-Lib\n",
+    "\n",
+    "Es una alternativa al uso de zipline y pyfolio similar a Ta-lib. Tiene como objetivo crear una librería de código abierto para modelat, comercializar y gestionar riesgos. El paquete contiene herramientas para diseñar e implementar algoritmos avanzados que incluyen caracterísitcas tales como convecnciones de mercado, modelos de curva de rendimiento, solucionadores, PDE, Monte Carlo y otros."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matplotlib\n",
+    "\n",
+    "La visualización es importante para comprender las tendencias dentro de los datos financieros y también para transmitir conocimientos al personal no técnico."
+   ]
   }
  ],
  "metadata": {
